--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,16 +108,11 @@ section {
 .intro {
   text-align: center;
 }
+/*remove this entire CSS rule*/
 .intro h2 {
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  border-bottom: 3px solid;
-  border-color: #fce138;
-  /* add this alongside your other declarations*/
-  display: inline-block;
+
 }
+
 .intro p {
   line-height: 1.7;
   color: #39a6b2;
@@ -126,7 +121,54 @@ section {
   /*add this alongside your other declarations */
   margin: 0 auto;
 }
-  
+  .steps {
+    text-align: center;
+    background: #fce138;
+  }
+  /*remove this entire CSS rule too*/
+.steps h2{
+  }
+
+>section-title {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  display: inline-block;
+  border-bottom: 3px solid;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+
+.steps div {
+  margin-bottom: 80px;
+}
+
+.steps img {
+  width: 15%;
+  margin: 10px 0;
+}
+
+.steps h3 {
+  color: #024e76;
+  font-size: 46px;
+  margin-top: 10px;
+}
+
+.steps p {
+  color:#39a6b2;
+  font-size: 26px;
+}
+.steps span {
+  font-size: 38px;
+}
+
 
 
 
