--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,7 +206,30 @@ overflow: auto;
   font-size: 17px;
   line-height: 1.3;
 }
-
+.section-title {
+  font-size: 55px;
+  display: inline-block;
+  padding: 0 100px 20px 100px;
+  border-bottom: 3px solid;
+  margin-bottom: 35px;
+  color: #024e76;
+}
+/*Reach out styles start*/
+.contact {
+  text-align: center;
+  background: #024e76;
+}
+.contact h2 {
+  color: #fce138;
+}
+.contact-info div {
+  width: 410px;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+  margin: 30px 0 0 60px;
+  color: white;
+}
 
 
 
