--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,16 +3,19 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   /* more on this crazy alphanumerical value in a minute! */
   color: #39a6b2;
   font-family: Helvetica, Arial, sans-serif;
 }
+
 /* apply styles to <header> */
 header {
   padding: 20px 35px;
   background-color: #39a6b2;
 }
+
 header h1 {
   font-weight: bold;
   font-size: 36px;
@@ -20,84 +23,96 @@ header h1 {
   margin: 0;
   display: inline;
 }
-
 header a {
   text-decoration: none;
   color: #fce138;
 }
+
 header nav {
   float: right;
   margin: 7px 0;
 }
+
 header nav ul li {
   display: inline;
 }
+
 header nav ul li a {
   margin: 0 30px;
   font-weight: lighter;
   font-size: 22px;
 }
+
 footer {
   background: #fce138;
   width: 100%;
   padding: 40px 35px;
 }
+
 footer h2 {
   display: inline;
   color: #024e76;
   font-size: 30px;
   margin: 0;
 }
+
 footer div {
   float: right;
   line-height: 1.5;
   text-align: right;
 }
+
 footer a {
   color: #024e76;
 }
+
 section {
   padding: 60px;
 }
+
 /* Hero Style Start */
 .hero {
-  background-image: url("../images/hero-bg.jpg");
-  height: 600px;
+  background-image: url('../images/hero-bg.jpg');
   background-size: cover;
   background-position: center;
   position: relative;
+  height: 600px;
 }
-/* Hero Style End*/
-/* Hero form start*/
+/* Hero Style End */
+
 .hero-form {
   border: 3px solid #024e76;
-  background-color: #fce138; 
+  background-color: #fce138;
   padding: 20px;
   width: 500px;
   color: #024e76;
   position: absolute;
   bottom: 120px;
   right: 140px;
-  }
-  .hero-form h3 {
-    font-size: 24px;
-    margin: 0;
-  }
-  .hero-form p {
-    margin: 5px 0 15px 0
-  }
-  .form-input {
-    border: 1px solid #024e76;
-    display: block;
-    padding: 7px 15px;
-    font-size: 16px;
-    color: #024e76;
-    width: 100%;
-    margin-bottom: 15px;
-  }
-.hero-form label {
-  margin: 1 5px;
 }
+
+.hero-form h3 {
+  font-size: 24px;
+  margin: 0;
+}
+.hero-form p {
+  margin: 5px 0 15px 0;
+}
+
+.form-input {
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.hero-form label {
+  margin: 0 5px;
+}
+
 .hero-form button {
   color: #fce138;
   background-color: #024e76;
@@ -105,12 +120,9 @@ section {
   padding: 10px 20px;
   font-size: 16px;
 }
+
 .intro {
   text-align: center;
-}
-/*remove this entire CSS rule*/
-.intro h2 {
-
 }
 
 .intro p {
@@ -118,32 +130,12 @@ section {
   color: #39a6b2;
   width: 80%;
   font-size: 20px;
-  /*add this alongside your other declarations */
   margin: 0 auto;
 }
-  .steps {
-    text-align: center;
-    background: #fce138;
-  }
-  /*remove this entire CSS rule too*/
-.steps h2{
-  }
 
->section-title {
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
-  border-bottom: 3px solid;
-}
-
-.primary-border {
-  border-color: #fce138;
-}
-
-.secondary-border {
-  border-color: #39a6b2;
+.steps {
+  text-align: center;
+  background: #fce138;
 }
 
 .steps div {
@@ -162,21 +154,43 @@ section {
 }
 
 .steps p {
-  color:#39a6b2;
-  font-size: 26px;
+  color: #39a6b2;
+  font-size: 23px;
 }
+
 .steps span {
   font-size: 38px;
 }
+
+.section-title {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  display: inline-block;
+  border-bottom: 3px solid;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+
 .trainers {
-text-align: center;
+  text-align: center;
 }
-.trainer {width: 900px;
-margin: 0 auto 30px auto;
-background: #024e76;
-color: #fce138;
-overflow: auto;
+
+.trainer {
+  width: 900px;
+  margin: 0 auto 30px auto;
+  background: #024e76;
+  color: #fce138;
+  overflow: auto;
 }
+
 .trainer img {
   width: 35%;
   float: left;
@@ -187,41 +201,46 @@ overflow: auto;
   float: left;
   width: 65%;
 }
-.text-left {
-  text-align: left;
-}
-.text-right {
-  text-align: right;
-}
+
 .trainer-bio h3 {
   font-size: 32px;
   margin-bottom: 8px;
 }
+
 .trainer-bio h4 {
   font-weight: lighter;
   font-size: 26px;
   margin-bottom: 25px;
 }
+
 .trainer-bio p {
   font-size: 17px;
   line-height: 1.3;
 }
-.section-title {
-  font-size: 55px;
-  display: inline-block;
-  padding: 0 100px 20px 100px;
-  border-bottom: 3px solid;
-  margin-bottom: 35px;
-  color: #024e76;
+
+.text-left {
+  text-align: left;
 }
-/*Reach out styles start*/
+
+.text-right {
+  text-align: right;
+}
+
+/* REACH OUT STYLES START */
 .contact {
   text-align: center;
   background: #024e76;
 }
+
 .contact h2 {
   color: #fce138;
 }
+
+.contact-info iframe {
+  width: 400px;
+  height: 400px;
+}
+
 .contact-info div {
   width: 410px;
   display: inline-block;
@@ -231,9 +250,21 @@ overflow: auto;
   color: white;
 }
 
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
 
+.contact-info p,
+.contact-info address {
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 20px;
+  font-style: normal;
+}
 
+.contact-info a {
+  color: #fce138;
+}
 
-
-
-
+/* REACH OUT STYLES END */
